--- a/Sattva-Songbird_files/style.css
+++ b/Sattva-Songbird_files/style.css
@@ -1247,7 +1247,7 @@ font-size: 9px;
 }
 .benefits h4 {
   display: block;
-  font-size: 30px;
+  /* font-size: 30px; */
   font-family: "Playfair Display", serif;
   margin-bottom: 15px;
 }
